@@ -32,6 +32,7 @@ define( function( require ) {
        Solute.BLOOD,
        Solute.SPIT,
        Solute.MILK,
+       Solute.CHICKEN_SOUP,
        Solute.COFFEE,
        Solute.BEER,
        Solute.LIME_SODA,
@@ -42,7 +43,7 @@ define( function( require ) {
     thisModel.water = Water;
     thisModel.beaker = new Beaker( new Vector2( 270, 580 ), new Dimension2( 300, 305 ) );
     var yDropper = 260;
-    thisModel.dropper = new Dropper( thisModel.solutes[0], new Vector2( thisModel.beaker.location.x + 60, yDropper ), new Bounds2( 300, yDropper, 400, yDropper ) );
+    thisModel.dropper = new Dropper( Solute.CHICKEN_SOUP, new Vector2( thisModel.beaker.location.x + 60, yDropper ), new Bounds2( 300, yDropper, 400, yDropper ) );
     thisModel.solution = new Solution( thisModel.dropper.soluteProperty, 0, thisModel.water, 0, thisModel.beaker.volume );
     thisModel.waterFaucet = new Faucet( new Vector2( 185, 230 ), -400,
       { enabled: thisModel.solution.volumeProperty.get() < thisModel.beaker.volume } );
