@@ -4,6 +4,7 @@
   "custom": "Custom",
   "solutions": "Solutions",
   "choice.milk": "Milk",
+  "choice.chickenSoup": "Chicken Soup",
   "choice.batteryAcid": "Battery Acid",
   "choice.vomit": "Vomit",
   "choice.soda": "Soda Pop",
